<resources>
    <string name="app_name">H A B I T I C A</string>
    <string name="empty_list">No reminders, press on the +(Add) button to create one</string>
    <string name="empty_list2">No Completed Reminders</string>
    <string name="completed">Show Completed</string>
    <string name="del">Delete</string>
    <string name="dialog_title">Please enter the location:</string>
    <string name="dialog_error_title">Enter a valid location:</string>
    <string name="dialog_hint">location</string>
    <string name="pref_settings">Preferences</string>
    <string name="search_action">Search</string>
    <string name="action_share">Share</string>
    <string name="action_edit">Edit</string>
    <string name="sort_action">Sort by</string>
    <string name="sort_title">By title</string>
    <string name="sort_dateScheduled">By date Scheduled</string>
    <string name="sort_dateModified">By date modified</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="string_dummy_text">A city boy that can never say never got the life but the girl bites like a wolf</string>
    <string name="string_dummy_date_text1">Date Created:   Wednesday, April 14, 2012 at 04:20 AM</string>
    <string name="string_dummy_date_text">Date Scheduled:   Wednesday, April 6, 2013 at 12:42 AM</string>
    <string name="string_dummy_time_text">12:42 AM</string>
    <string name="rem_title">Title</string>
    <string name="rem_date">Date</string>
    <string name="rem_time">Time</string>
    <string name="action_save">Save</string>
    <string name="search_hint">Search Reminders</string>
    <string name="show_comp">Show Completed</string>
    <string name="hide_comp">Hide Completed</string>
    <string name="title_activity_reminder_view">View Reminder</string>
    <string name="title_activity_reminder_edit">Create Reminder</string>
    <string name="helpAction">Help</string>
    <string name="add_location">Add reminder location</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_erase">Erase</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_share">Share</string>
    <string name="orange">orange color</string>
    <string name="red">red color</string>
    <string name="brown">brown color</string>
    <string name="yellow">yellow color</string>
    <string name="blue">blue color</string>
    <string name="green">green color</string>
    <string name="purple">purple color</string>
    <string name="action_favourite">Add to favourite</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notification_reminder_complete">Reminder completed notifications</string>
    <string name="pref_title_ringtone">Notification Sound</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_favourite_reminders">My Favourite Reminders</string>
    <string name="title_and_description">Life Reminder: %1$s</string>
    <string name="pending">Pending</string>
    <string name="complete">Complete</string>
    <string name="appleFont">fonts/Helvetica Neue Light (Open Type).ttf</string>
    <string name="view_info">view info</string>
    <string name="sd_permission_denied">"Please enable SDCARD write permission inorder to use this service "</string>
    <string name="share_capture">Share screenshot with which app?</string>
    <string name="no_sdcard">External Storage not available!</string>
    <string name="error">Error!</string>
    <string name="ticker_text">Schedule Complete</string>
    <string-array name="pref_look_and_feel">
        <item>Dark Theme</item>
        <item>Light Theme</item>
    </string-array>
    <string-array name="pref_look_and_feel_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="pref_snooze_interval_titles">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_snooze_interval_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>
    <string name="no_match">No match found!</string>
    <string name="shareReminder">Which app should handle this?</string>
    <string name="searchText">Find which reminder</string>
    <string name="empty">" "</string>
    <string name="rem_desc">Enter the reminder description</string>
    <string name="enter_Details">Enter reminder details here(optional)…</string>
    <string name="set_dateTime">Set Date And Time</string>
    <string name="extra_opt">Other Options</string>
    <string name="set_priority">Set Priority</string>
    <string name="rem_repeat">Set Repeat</string>
    <string name="default_RepeatTxt">Never</string>
    <string name="exp_img">Expanded Image</string>
    <string name="cam">Camera</string>
    <string name="imp">Import</string>
    <string name="remove_Img">Remove</string>
    <string name="edit_info">edit existing reminder</string>
    <string name="create_Info">create a new reminder</string>
    <string name="regInfo">Regular Reminder info</string>
    <string name="dueDate">Date Due: Wednesday, April 6, 2013 at 12:42 AM</string>
    <string name="repeating_every_yearly">Repeating every Yearly:</string>
    <string name="channel_name" translatable="false">@string/app_name</string>
    <string name="channel_description">Task Reminder Notifications</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="no_data_available">Add new streak</string>
    <string name="current_streak_text" translatable="false">%d</string>
    <string name="task_string_format_with_time">I will %s for %s at %s in %s</string>
    <string name="task_string_format_without_time">I will %s at %s in %s</string>
    <string name="time_tag">Time</string>
    <string name="default_task_title">TODO</string>
    <string name="delete_task">Delete</string>
    <string name="edit_task">Edit</string>
    <string name="dialog_delete_title">Delete Task</string>
    <string name="dialog_delete_message">All of your progress wil be lost forever.</string>
    <string name="ok">OK</string>
    <string name="task_title_empty_error">Task title cannot be empty</string>
    <string name="task_time_empty_error">Set time for task</string>
    <string name="task_location_empty_error">location cannot be empty</string>
    <string name="notification_title">Time for</string>
    <string name="dialog_quit_title">Are you sure you want to quit?</string>
    <string name="dialog_quit_message">You haven\'t completed the task, your progress will be lost</string>
    <string name="new_task_added_msg">Woo-hoo! New task added to Arsenal</string>
    <string name="task_deleted_msg">Task successfully deleted! Thank you for your service</string>
    <string name="feedback_tag">Feedback</string>
    <string name="about_tag">About App</string>
    <string name="share_app_tag">Share app with Friends</string>
    <string name="streak_tag">Streak</string>
    <string name="task_not_completed">Not done</string>
    <string name="task_completed">You\'re on fire today</string>
    <plurals name="numberOfMinute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="streakLost">
        <item quantity="one">You lost streak in</item>
        <item quantity="other">You lost streaks in</item>
    </plurals>
    <string name="content_descriptions_set_alarm_icon">Set alarm icon</string>
    <string name="sleep_state_unhealthy">Unhealthy</string>
    <string name="sleep_state_optimal">Optimal</string>
    <string name="sleep_state_healthy">Healthy</string>
    <string name="sleep_state_notrecommended">Not recommended</string>
    <string name="sleep_now_tab">Sleep now</string>
    <string name="wake_up_at_tab">Wake up at</string>
    <string name="alarms_tab">Alarms</string>
    <string name="sleep_now_card_info_title">Going to sleep right now?</string>
    <string name="sleep_now_card_info_summary">Choose any hour of listed below, so I will easily wake you up on time!</string>
    <string name="activity_alarm_hint">Tap anywhere to dismiss alarm</string>
    <string name="wake_up_at_set_hour_button">Set hour</string>
    <string name="global_hour_mark">h</string>
    <string name="global_minute_mark">min</string>
    <string name="list_element_summary_changeable">%1$s of sleep | %2$s</string>
    <string name="wake_up_at_empty_list_title">Wake up on time!</string>
    <string name="wake_up_at_empty_list_summary">Tap the \'Set hour\' button to pick a specific hour at which you want to wake up. I will create a list of hours you should fall asleep at.</string>
    <string name="alarms_empty_list_title">Keep an eye on your alarms!</string>
    <string name="alarms_empty_list_summary">Don\'t worry I won\'t eat them… I just remove already launched alarms, and those active - I store them safely here.</string>
    <string name="edit_alarm">Edit alarm</string>
    <string name="toast_double_back_to_exit">Press once again to exit</string>
    <string name="pref_ringtone_select_title">Alarm ringtone</string>
    <string name="pref_ringtone_select_default_summary">Tap to select ringtone</string>
    <string name="pref_ringtone_select_selected_summary">Chosen ringtone: %s</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add">Add</string>
    <string name="empty_list_image">Empty list image</string>
    <string name="dialog_alarm_description">Alarm will ring at %1$s, which gives you %2$s type of rest</string>
    <string name="alarm_ringtone">Alarm ringtone</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="wakeupat_view_description">To wake up at %1$s fully rested you should fall asleep at one of the listed hours below.</string>
    <string name="tap_to_set_alarm">Tap to set alarm</string>
    <string name="tap_to_edit_press_and_hold_to_delete">Tap to edit, press and hold to delete</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_pixels">Year in Pixels</string>
    <string name="action_chart">Mood Graphs</string>
    <string name="action_settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="change_mood_name">Rename Mood</string>
    <string name="invalid_name">Mood needs valid name.</string>
    <string name="new_mood_name">New mood name</string>
    <string name="reset_color_description">Reset color</string>
    <string name="format_date">%s %s %d</string>
    <string name="question">How did you feel today?</string>
    <string name="add_notes">Add Notes</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="save_notes">Save Notes</string>
    <string name="notes_label">Today\'s Notes</string>
    <string name="month_initial_january">J</string>
    <string name="month_initial_february">F</string>
    <string name="month_initial_march">M</string>
    <string name="month_initial_april">A</string>
    <string name="month_initial_may">M</string>
    <string name="month_initial_june">J</string>
    <string name="month_initial_july">J</string>
    <string name="month_initial_august">A</string>
    <string name="month_initial_september">S</string>
    <string name="month_initial_october">O</string>
    <string name="month_initial_november">N</string>
    <string name="month_initial_december">D</string>
    <string name="january">January</string>
</resources>