<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_48px"
        android:title="@string/search_action"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_sort_icon"
        android:title="@string/sort_action"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:title="@string/sort_title"
                    android:id="@+id/sortTitle"
                    android:orderInCategory="1"
                    android:checked="true" />
                <item
                    android:title="@string/sort_dateModified"
                    android:id="@+id/sortDateModified"
                    android:orderInCategory="2" />
                <item
                    android:title="@string/sort_dateScheduled"
                    android:id="@+id/sortDateScheduled"
                    android:orderInCategory="3" />
            </group>

        </menu>
    </item>
</menu>