<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General Settings">


        <PreferenceScreen
            android:icon="@drawable/google_alerts_filled_50px"
            android:title="@string/pref_header_notifications">
            <SwitchPreference
                android:defaultValue="true"
                android:key="notification_reminder_complete"
                android:title="@string/pref_notification_reminder_complete" />

            <RingtonePreference
                android:defaultValue="content//settings//system//notification_sounds"
                android:dependency="notification_reminder_complete"
                android:icon="@drawable/music_48px"
                android:key="notification_reminder_complete_ringtone"
                android:ringtoneType="notification"
                android:title="@string/pref_title_ringtone" />
            <SwitchPreference
                android:defaultValue="true"
                android:dependency="notification_reminder_complete"
                android:icon="@drawable/shake_phone_filled_50px"
                android:key="notification_reminder_complete_vibrate"
                android:title="@string/pref_title_vibrate" />
            <ListPreference
                android:defaultValue="5"
                android:dependency="notification_reminder_complete"
                android:entries="@array/pref_snooze_interval_titles"
                android:entryValues="@array/pref_snooze_interval_values"
                android:icon="@drawable/synchronize_52px"
                android:key="snooze_frequency"
                android:title="Snooze Interval"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null" />

        </PreferenceScreen>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_look_and_feel"
            android:entryValues="@array/pref_look_and_feel_values"
            android:icon="@drawable/change_theme_filled_50px"
            android:key="customize_app_theme"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="@null"
            android:title="Customize the look and feel" />

    </PreferenceCategory>

</PreferenceScreen>